// Copyright (C) 2020 Aung Maw
// Licensed under the GNU General Public License v3.0

syntax = "proto3";

package p2p.pb;

message Request {
	Type type = 1;
	bytes data = 2;
	uint32 seq = 3;

	enum Type {
		Invalid = 0;
		Block = 1;
		TxList = 2;
	}
}

message Response {
	uint32 seq = 1;
	bytes data = 2;
	string error = 3;
}

message HashList {
	repeated bytes list = 1;
}